apps/posts/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: posts-deployment
  template:
    metadata:
      labels:
        app: posts-deployment
    spec:
      containers:
      - name: posts-deployment
        image: 057560478517.dkr.ecr.us-east-1.amazonaws.com/devops-estudos/nestjs-app:main
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
        - name: http
          containerPort: 3000
