apps/posts/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts-deployment
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
