apps/posts/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-ingress
  labels:
    app: posts
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:057560478517:certificate/da6059d6-614a-4d12-9fe9-05a427441a8f
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: default-alb
spec:
  ingressClassName: alb
  rules:
    - host: posts.vianaz.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 80
